syntax = "proto3";

package omnipair.stream;

service StreamService {
  rpc StreamSwapsUpdates(SwapsRequest) returns (stream SwapsUpdate);
}

message SwapsRequest {}

message SwapsUpdate {
  string id = 1;
  string pair = 2;
  string user_address = 3;
  bool is_token0_in = 4;
  string amount_in = 5;
  string amount_out = 6;
  string reserve0 = 7;
  string reserve1 = 8;
  string timestamp = 9;
  string tx_sig = 10;
  string slot = 11;
  string fee_paid0 = 12;
  string fee_paid1 = 13;
  string ema_price = 14;
}
